# snowflake-ai-hub

./: LICENSE  README.md  app.py  pyproject.toml  report.md  requirements.txt
data/: analytics.db
data/vector_store/: index.npy  meta.jsonl
src/resume_chat_bot_agent/: __init__.py  app.py  crew.py  embedding.py  logging_store.py  main.py  utils.py  vector_store.py
static/: index.html
